Mock Sql to test Refactor code

--- a/DBI_PEA_Scoring/DBI_PEA_Scoring/DBI_PEA_Scoring.csproj
+++ b/DBI_PEA_Scoring/DBI_PEA_Scoring/DBI_PEA_Scoring.csproj
@@ -48,18 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\SecureJsonSerializer.cs" />
+    <Compile Include="Model\Score.cs" />
     <Compile Include="UI\ImportMaterial.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\ImportMaterial.Designer.cs">
       <DependentUpon>ImportMaterial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Candidate.cs" />
-    <Compile Include="Model\ExamItem.cs" />
-    <Compile Include="Model\Question.cs" />
-    <Compile Include="Model\QuestionsBank.cs" />
-    <Compile Include="Model\Requirement.cs" />
-    <Compile Include="Model\Submition.cs" />
+    <Compile Include="Model\Teacher\Candidate.cs" />
+    <Compile Include="Model\Teacher\ExamItem.cs" />
+    <Compile Include="Model\Teacher\Question.cs" />
+    <Compile Include="Model\Teacher\Requirement.cs" />
+    <Compile Include="Model\Student\Submition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Scoring.cs">
