--- a/DBI_PEA_Scoring/DBI_PEA_Scoring/DBI_PEA_Scoring.csproj
+++ b/DBI_PEA_Scoring/DBI_PEA_Scoring/DBI_PEA_Scoring.csproj
@@ -57,10 +57,10 @@
     <Compile Include="Common\Constant.cs" />
     <Compile Include="Common\SecureJsonSerializer.cs" />
     <Compile Include="Model\Teacher\Candidate.cs" />
-    <Compile Include="Model\Teacher\ExamItem.cs" />
     <Compile Include="Model\Teacher\Question.cs" />
     <Compile Include="Model\Result.cs" />
     <Compile Include="Model\Student\Submition.cs" />
+    <Compile Include="Model\Teacher\TestItem.cs" />
     <Compile Include="UI\ImportMaterial.cs">
       <SubType>Form</SubType>
     </Compile>
