--- a/DBI_PEA_Scoring/DBI_PEA_Scoring/DBI_PEA_Scoring.csproj
+++ b/DBI_PEA_Scoring/DBI_PEA_Scoring/DBI_PEA_Scoring.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Common\Constant.cs" />
     <Compile Include="Common\SecureJsonSerializer.cs" />
+    <Compile Include="Model\Input.cs" />
     <Compile Include="Model\Teacher\Candidate.cs" />
     <Compile Include="Model\Teacher\Question.cs" />
     <Compile Include="Model\Result.cs" />
