--- a/DBI_PEA_Scoring/DBI_PEA_Scoring/App.config
+++ b/DBI_PEA_Scoring/DBI_PEA_Scoring/App.config
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup useLegacyV2RuntimeActivationPolicy="true"><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+  <appSettings>
+    <add key="username" value="sa"/>
+    <add key="password" value="sa"/>
+    <add key="serverName" value="localhost"/>
+    <add key="initialCatalog" value="master"/>
+  </appSettings>
 </configuration>
