--- a/DBI_PEA_Scoring/DBI_PEA_Scoring/App.config
+++ b/DBI_PEA_Scoring/DBI_PEA_Scoring/App.config
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
   <appSettings>
     <add key="username" value="sa"/>
     <add key="password" value="sa"/>
     <add key="serverName" value="localhost"/>
     <add key="initialCatalog" value="master"/>
+    <add key="timeOutInSecond" value="10"/>
+
   </appSettings>
 </configuration>
