--- a/DBI_Grading/DBI_Grading/DBI_Grading.csproj
+++ b/DBI_Grading/DBI_Grading/DBI_Grading.csproj
@@ -119,9 +119,9 @@
     <Compile Include="UI\Grading.Designer.cs">
       <DependentUpon>Grading.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utils\CompareUtils.cs" />
     <Compile Include="Utils\ExcelUtils.cs" />
     <Compile Include="Utils\Dao\General+Compare.cs" />
-    <Compile Include="Utils\Dao\General+Support.cs" />
     <Compile Include="Utils\Dao\General.cs" />
     <Compile Include="Utils\Dao\SchemaType+Query.cs" />
     <Compile Include="Utils\FileUtils.cs" />
